--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
-    <h2>Otro título</h2>
-    <p>Un nuevo parrafo</p>
-    <p>Esta es la rama</p>
-    <img src="#" alt="">
+    <h2>Mi rama</h2>
 </body>
 </html>
